--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "tonovaso",
   "version": "2.0.0",
   "description": "Elbit Foundation Base",
   "main": "GulpFile.js",
