--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,24 @@
     ],
     "headers": [
       {
+        "source": "/",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-transform"
+          }
+        ]
+      },
+      {
+        "source": "/tickets",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-transform"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(eot|otf|ttf|ttc|woff)",
         "headers": [
           {
