Adicionando redirecionamentos para a páginas de 20 anos (historia)

--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,16 @@
         "source": "/ingressos",
         "destination": "/tickets",
         "type": 301
+      },
+      {
+        "source": "/historia",
+        "destination": "/20-anos",
+        "type": 301
+      },
+      {
+        "source": "/20anos",
+        "destination": "/20-anos",
+        "type": 301
       }
     ],
     "headers": [
